Added basic playlist functionality
and started using Backbone.js (& Underscore.js)

--- a/public/style.css
+++ b/public/style.css
@@ -38,3 +38,7 @@ div#right-panel {
     /*height: 300px;*/
     background: lightgreen;
 }
+
+#yt-list a, #yt-playlist a {
+    text-decoration: none;
+}
